--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
 	<link rel="stylesheet" href="css/swiper-bundle.min.css" />
 	<link rel="stylesheet" href="css/style.css">
+	<script src="./js/cart.js" defer></script>
+	<script src="./js/search.js" defer></script>
 </head>
 <!-- class="show-goods" -->
 
@@ -272,8 +274,7 @@
 			<div class="col-lg-3 col-sm-6">
 				<div class="goods-card">
 					<span class="label">New</span>
-					<!-- /.label --><img src="img/image-122.jpg" alt="image: Striped Long Sleeve Shirt"
-						class="goods-image">
+					<!-- /.label --><img src="img/image-122.jpg" alt="image: Striped Long Sleeve Shirt" class="goods-image">
 					<h3 class="goods-title">Striped Long Sleeve Shirt</h3>
 					<!-- /.goods-title -->
 					<p class="goods-description">Red/Sky Blue</p>
@@ -318,8 +319,7 @@
 				<div class="col-lg-3 col-sm-6">
 					<div class="goods-card">
 						<span class="label">New</span>
-						<!-- /.label --><img src="img/image-120.jpg" alt="image: Faded Beach Trousers"
-							class="goods-image">
+						<!-- /.label --><img src="img/image-120.jpg" alt="image: Faded Beach Trousers" class="goods-image">
 						<h3 class="goods-title">Faded Beach Trousers</h3>
 						<!-- /.goods-title -->
 						<p class="goods-description">Navy/Ochre/Black/Khaki</p>
@@ -384,8 +384,7 @@
 				<div class="col-lg-3 col-sm-6">
 					<div class="goods-card">
 						<span class="label">New</span>
-						<!-- /.label --><img src="img/image-120.jpg" alt="image: Faded Beach Trousers"
-							class="goods-image">
+						<!-- /.label --><img src="img/image-120.jpg" alt="image: Faded Beach Trousers" class="goods-image">
 						<h3 class="goods-title">Faded Beach Trousers</h3>
 						<!-- /.goods-title -->
 						<p class="goods-description">Navy/Ochre/Black/Khaki</p>
@@ -450,8 +449,7 @@
 				<div class="col-lg-3 col-sm-6">
 					<div class="goods-card">
 						<span class="label">New</span>
-						<!-- /.label --><img src="img/image-120.jpg" alt="image: Faded Beach Trousers"
-							class="goods-image">
+						<!-- /.label --><img src="img/image-120.jpg" alt="image: Faded Beach Trousers" class="goods-image">
 						<h3 class="goods-title">Faded Beach Trousers</h3>
 						<!-- /.goods-title -->
 						<p class="goods-description">Navy/Ochre/Black/Khaki</p>
